test/resources/parser/failing/testITE3.scala
object MissingBranchBraces {
  if (true) 1 else 2
}